# Avatar-Desktop

./: .gitignore  README.md
avatar-core/: Cargo.toml
avatar-core/src/: ai.rs  audit.rs  automation.rs  camera.rs  capture.rs  db.rs  intent.rs  lib.rs  memory.rs  security.rs  streaming.rs  system_monitor.rs  voice.rs
avatar-desktop/: package-lock.json  package.json
avatar-desktop/src/: App.css  App.tsx
avatar-desktop/src-tauri/: Cargo.toml  tauri.conf.json
avatar-desktop/src-tauri/src/: lib.rs  main.rs
avatar-mobile/: README.md  pubspec.yaml
avatar-mobile/android/: build.gradle.kts
avatar-mobile/android/app/: build.gradle.kts
avatar-mobile/android/app/src/main/: AndroidManifest.xml
avatar-mobile/android/app/src/main/kotlin/com/example/avatar_mobile/: MainActivity.kt
avatar-mobile/ios/Runner/: Info.plist
avatar-mobile/ios/Runner.xcodeproj/: project.pbxproj
avatar-mobile/lib/: main.dart
avatar-mobile/lib/screens/: chat.dart  dashboard.dart  pairing.dart  remote_view.dart
avatar-mobile/test/: widget_test.dart
avatar-mobile/windows/: CMakeLists.txt
avatar-mobile/windows/runner/: Runner.rc  main.cpp
docs/: deployment.md  security_review.md
